--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0cc0a83e-a98a-42e5-87ce-f0b14eaadb76",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4f539262-9d1c-450e-847f-c4e5826515fb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "261eb7e9-81ad-4733-89a4-fe5d14526f0f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9b811ab3-2554-4322-bd8e-a2ce8b30a7f6",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "85248cc1-7b37-40fe-a5c3-ac9be2d9e5a7",
    "metadata": {},
    "outputs": [],
@@ -55,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "0b4378e7-c3b2-47e4-b657-89cc6594b80c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"It's never too late to ask! Whether you can still join a course depends on several factors, such as the specific policies of the institution offering the course, the course's start date, and its enrollment deadlines. Here are a few steps you can take to find out if you can still join:\\n\\n1. **Check the Course Website:** Often, the course's webpage will have information regarding enrollment deadlines.\\n  \\n2. **Contact the Instructor or Institution:** Reach out directly to the course instructor or the admissions office. They can provide the most accurate information regarding your particular situation.\\n\\n3. **Look for Alternative Sessions:** If the course is already underway or full, see if the institution offers another session soon or if you can join a waitlist.\\n\\n4. **Consider Online or Self-Paced Options:** Some institutions offer online or self-paced versions of their courses, which might have more flexible enrollment policies.\\n\\nIf you provide more specific information about the course and institution, I might be able to offer more targeted advice!\""
+       "\"I'm not sure which specific course you're referring to, but here are some general steps you can take to find out if it's too late to join:\\n\\n1. **Check the Course Website**: Most courses have an official website where they list important dates and deadlines.\\n\\n2. **Contact the Instructor or Administration**: Reach out via email or phone to the course instructor or the administrative office. They can provide the most accurate information regarding enrollment deadlines.\\n\\n3. **Look for Late Enrollment Options**: Some courses allow for late enrollment, sometimes with a penalty or specific conditions.\\n\\n4. **Online Learning Platforms**: If it's an online course, platforms like Coursera, edX, Udemy, and others often have rolling admissions or start dates spread throughout the year.\\n\\n5. **Academic Calendar**: If it's a university or college course, checking the institution’s academic calendar website should give you details on enrollment periods and any late registration opportunities.\\n\\n6. **Social Media and Forums**: Sometimes instructors or institutions post updates on social media or forums that can give you the latest information.\\n\\nCan you provide more details about the course you're interested in? That way, I could offer more specific advice.\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
